objects/LLC_BI__Zero_Balance_Account_Service__c.object
<CustomObject>
    <description>This object is ancillary with a one-to-one lookup with the Treasury and is used to store fields specific to ZBA services.</description>
    <fields>
        <fullName>LLC_BI__Master_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master Account #</label>
        <referenceTo>LLC_BI__Deposit__c</referenceTo>
        <relationshipLabel>Zero Balance Account Services</relationshipLabel>
        <relationshipName>Zero_Balance_Account_Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Sub_Account_1__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Sub Account #1</label>
        <referenceTo>LLC_BI__Deposit__c</referenceTo>
        <relationshipLabel>Zero Balance Account Services (Sub Account #1)</relationshipLabel>
        <relationshipName>Zero_Balance_Account_Services1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Treasury_Service_Reference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Treasury Service Reference</label>
        <referenceTo>LLC_BI__Treasury_Service__c</referenceTo>
        <relationshipLabel>Zero Balance Account Services</relationshipLabel>
        <relationshipName>Zero_Balance_Account_Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Zero Balance Account Service</label>
    <nameField>
        <displayFormat>Z-{000000000}</displayFormat>
        <label>Zero Balance Account Service Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Zero Balance Account Services</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>